force-app/main/default/objects/Verification_Event__e/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <label>NPI Number</label>
    <type>Text</type>
    <length>10</length>
</CustomField>