force-app/main/default/objects/Verification_Event__e/fields/Provider_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_Application_ID__c</fullName>
    <label>Provider Application ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>