force-app/main/default/objects/Verification_Event__e/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <label>Risk Category</label>
    <type>Text</type>
    <length>50</length>
</CustomField>